# ChangeLog for app-admin/ulogd
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/ulogd/ChangeLog,v 1.44 2007/04/28 17:09:31 tove Exp $

  28 Apr 2007; Torsten Veller <tove@gentoo.org> ulogd-1.23-r1.ebuild,
  ulogd-1.24.ebuild:
  Fix *initd, *confd and *envd calls (#173884, #174266)

  07 Feb 2007; Daniel Black <dragonheart@gentoo.org>
  +files/glsa-200701.patch:
  added patch now too. thanks<analyzer> on #gentoo-bugs for bringing it to our
  attention

*ulogd-1.23-r1 (06 Feb 2007)

  06 Feb 2007; Alec Warner <antarus@gentoo.org> -ulogd-1.23.ebuild,
  +ulogd-1.23-r1.ebuild, ulogd-1.24.ebuild:
  -r1 for security patch, fixes bug # 161882

  23 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  -ulogd-1.01.ebuild, -ulogd-1.02.ebuild, -ulogd-1.02-r1.ebuild:
  Remove old versions

  23 Jan 2007; Alec Warner <antarus@gentoo.org>
  +files/configure-fixes.patch, ulogd-1.24.ebuild:
  patch the configure.in thanks to code from steven debock and bug # 144154

*ulogd-1.24 (17 Jan 2007)

  17 Jan 2007; Alec Warner <antarus@gentoo.org> +ulogd-1.24.ebuild:
  version bump for ulogd, with fix for syntax wrt to mysql, bug 91416

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> ulogd-1.02.ebuild,
  ulogd-1.02-r1.ebuild, ulogd-1.23.ebuild:
  dev-db/mysql => virtual/mysql

  08 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> ulogd-1.23.ebuild:
  Stable on amd64 wrt bug #141441.

  27 Jul 2006; Joshua Jackson <tsunam@gentoo.org> ulogd-1.23.ebuild:
  Stable x86; bug #141441

  23 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> ulogd-1.23.ebuild:
  ppc stable, bug #141441

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove aliz from metadata.xml as he's retired.

  13 Apr 2006; Torsten Veller <tove@gentoo.org> ulogd-1.23.ebuild:
  It's not parallel make safe - forced make -j1. Closes bug #128976.

  15 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>