@@ -27,14 +27,14 @@ EBUILD ulogd-1.23-r1.ebuild 1443 RMD160 547368d78c951fbac919570fd538285ec44e4f3a
 MD5 05ad474c3f604cd7020e99ca88f6b2f9 ulogd-1.23-r1.ebuild 1443
 RMD160 547368d78c951fbac919570fd538285ec44e4f3a ulogd-1.23-r1.ebuild 1443
 SHA256 905fcbc7c061e4e4e3a8862603fd07de23d118e1194986fb922670a9e8505cf8 ulogd-1.23-r1.ebuild 1443
-EBUILD ulogd-1.24.ebuild 1632 RMD160 933b4e889403714f28ce4bae59a746ac88ccdf91 SHA1 f4e34dd9ed666697eea8fe42ef81c027566b9f7e SHA256 d37032b700572fbc628ca50ac4baff3c4bc26665ead2621876f87aad68b6f21b
-MD5 8376b32f3f757630961844ca8acfe35d ulogd-1.24.ebuild 1632
-RMD160 933b4e889403714f28ce4bae59a746ac88ccdf91 ulogd-1.24.ebuild 1632
-SHA256 d37032b700572fbc628ca50ac4baff3c4bc26665ead2621876f87aad68b6f21b ulogd-1.24.ebuild 1632
-MISC ChangeLog 5682 RMD160 6b02443c44a5c48aad424ca2c3deec82ce99c0f9 SHA1 29389c5a4041243c1f6f2dfc03ec60fe7acc4539 SHA256 d57b1e6e9362593f5e5853696128fcc7ab61c98123ca95710c972d000d978ac7
-MD5 3b1e684f381a34c15d781e451aba84ec ChangeLog 5682
-RMD160 6b02443c44a5c48aad424ca2c3deec82ce99c0f9 ChangeLog 5682
-SHA256 d57b1e6e9362593f5e5853696128fcc7ab61c98123ca95710c972d000d978ac7 ChangeLog 5682
+EBUILD ulogd-1.24.ebuild 1569 RMD160 320f370b893f48d4ed0486c0674650b69bbb4ef5 SHA1 7cc9e0bafe57aebe21104a5e964bdfaf5e0a424e SHA256 1f93dcddd266a16bff784dd62b7d55f41f77fe06b2a94cf9839deec570d26067
+MD5 f23ae0ccafee03d6ff9941917eab45f5 ulogd-1.24.ebuild 1569
+RMD160 320f370b893f48d4ed0486c0674650b69bbb4ef5 ulogd-1.24.ebuild 1569
+SHA256 1f93dcddd266a16bff784dd62b7d55f41f77fe06b2a94cf9839deec570d26067 ulogd-1.24.ebuild 1569
+MISC ChangeLog 5803 RMD160 837839ec789f0c40526cd5553afdc9f9945d19a1 SHA1 aba489591e9552c2810a403af99678ca44768e36 SHA256 6007570e4da13f04bcf6faaad04646bb591ca94bd95d447e90a20e30e4418978
+MD5 b5492e17ec3aefc88128eaf6a72eab90 ChangeLog 5803
+RMD160 837839ec789f0c40526cd5553afdc9f9945d19a1 ChangeLog 5803
+SHA256 6007570e4da13f04bcf6faaad04646bb591ca94bd95d447e90a20e30e4418978 ChangeLog 5803
 MISC metadata.xml 160 RMD160 d86217bb48cf4283e08e43bcaabbc919101ad795 SHA1 d6147d00f16e8cfeef893d0764b0675a93d62849 SHA256 56fca1e06f6dcbe3bc12e7d3962998c7cb79d74f218ce8a17b07771b3e06f49e
 MD5 dffd46174e78b327c834fc3e4b1cf848 metadata.xml 160
 RMD160 d86217bb48cf4283e08e43bcaabbc919101ad795 metadata.xml 160
@@ -46,9 +46,9 @@ MD5 070acc4f66d59da70dcf1ba76d96d435 files/digest-ulogd-1.24 235
 RMD160 9c02348c3b699afa07b1c172c1cf3b8f85d6c3c5 files/digest-ulogd-1.24 235
 SHA256 dc1493b9bfc85441932b5d39ccec186432aaba7664253ea6556640c130419f34 files/digest-ulogd-1.24 235
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.3 (GNU/Linux)
+Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFGM3/TV3J2n04EauwRAuY4AJ4lG1GgONYlkwxwR3Q9ykbIY+2H9gCdFMPR
-Ejz11fJwiTmpXtifStL/xoI=
-=XP0y
+iD8DBQFGjxVVp/wUKkr7RBoRAuY6AKCUz2r0wcFdWJiLv30B+dVVC2VM6wCfU0MN
+5z6mYCI4UHNISiRpBX5LDTI=
+=Osws
 -----END PGP SIGNATURE-----
